--- a/client/src/components/Message/Message.css
+++ b/client/src/components/Message/Message.css
@@ -29,7 +29,7 @@
   .sentText {
     display: flex;
     align-items: center;
-    font-family: Helvetica;
+    font-family: Arial, Helvetica, sans-serif;
     color: #828282;
     letter-spacing: 0.3px;
   }
@@ -58,7 +58,7 @@
     color: #353535;
   }
   
-  .backgroundBlue {
+  .backgroundGrey {
     background: #3A3B3C;
   }
   
